scene/workspacescene: render overlay items in paintScreen

This ensures that overlay items are included in effects like the zoom effect,
which simplifies the zoom effect and fixes
- qtquick effects not being affected by zoom
- shake cursor duplicating the cursor while zoomed in
- dnd items not being rendered in the correct position while zoomed in

The only downside to this is that effects that block direct scanout also now
block the hardware cursor. Since neither offscreen nor qtquick effects block
direct scanout anymore, this shouldn't be a problem in practice though.

BUG: 489265
BUG: 513233